--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "framer-motion": "^3.10.3",
@@ -17,7 +18,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.12.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-toastify": "^7.0.4"
   },
   "devDependencies": {
     "@types/node": "^15.12.2",
